--- a/src/variables/variables.css
+++ b/src/variables/variables.css
@@ -3,6 +3,7 @@
   --light-black: rgba(0, 0, 0, 0.5);
   --dark-black: rgba(0, 0, 0, 0.9);
   --white: #ffffff;
+  --light-input: #cccccc;
   --gray: #545454;
   --light-gray: rgba(0, 0, 0, 0.2);
   --error: #ff0000;
