--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -1,10 +1,12 @@
 .header {
+  display: flex;
+  justify-content: space-between;
   /* size */
-  height: 74px;
+  height: 73px;
   max-width: 880px;
   /* offsets */
   margin: 0 auto;
-  padding-top: 52px;
+  padding-top: 45px;
   border-bottom: 1px solid var(--gray);
   /* smooth */
   transition: 0.5s ease-in-out;
@@ -15,7 +17,7 @@
     /* size */
     height: 55px;
     /* offsets */
-    padding-top: 28px;
-    padding-left: 28px;
+    padding: 28px;
+    padding-bottom: 0;
   }
 }
