--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,9 @@
 @import url('./blocks/header/__link/header__link.css');
 @import url('./blocks/header/__logo/header__logo.css');
 @import url('./blocks/header/__button/header__button.css');
+@import url('./blocks/header/__container/header__container.css');
+@import url('./blocks/header/__email/header__email.css');
+@import url('./blocks/header/__button/__button_state_inactive/header__button_state_inactive.css');
 /* main */
 @import url('./blocks/main/main.css');
 /* entry form */
