hotfix. Fix prettier issues

--- a/src/blocks/popup/__button/__button_action/popup__button_action_close.css
+++ b/src/blocks/popup/__button/__button_action/popup__button_action_close.css
@@ -5,7 +5,8 @@
   /* decoration */
   width: var(--close-size);
   height: var(--close-size);
-  background: url('../../../../images/icon/close.svg') center no-repeat;
+  background: url('../../../../images/icon/close.svg') center
+    no-repeat;
 }
 
 .popup__button_action_close:hover {
