--- a/src/blocks/popup/__status/__status_state/popup__status_state_success.css
+++ b/src/blocks/popup/__status/__status_state/popup__status_state_success.css
@@ -1,3 +1,4 @@
 .popup__status_state_success {
-  background: url('../../../../images/icon/success.svg') no-repeat center;
+  background: url('../../../../images/icon/success.svg') no-repeat
+    center;
 }
