--- a/src/blocks/profile/__button_action_add/profile__button_action_add.css
+++ b/src/blocks/profile/__button_action_add/profile__button_action_add.css
@@ -7,7 +7,8 @@
 
 @media screen and (max-width: 767px) {
   .profile__button_action_add {
-    background: url('../../../images/icon/add_small.png') no-repeat center;
+    background: url('../../../images/icon/add_small.png') no-repeat
+      center;
     /* size */
     width: 282px;
   }
