--- a/src/blocks/profile/__wrapper/profile__wrapper.css
+++ b/src/blocks/profile/__wrapper/profile__wrapper.css
@@ -21,7 +21,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: url('../../../images/icon/pencil-large.png') no-repeat 42% 50%;
+  background: url('../../../images/icon/pencil-large.png') no-repeat
+    42% 50%;
   background-size: 26px 26px;
   opacity: 0;
   z-index: 2;
